fix: z-index

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -6,6 +6,22 @@
     background-color: #b9b9b9;
   }
   25% {
+    border: 2px solid #006394;
+    background-color: #006394;
+    box-shadow: 0 0 5px #dddddd;
+  }
+  100% {
+    border: 2px solid #b9b9b9;
+    background-color: #b9b9b9;
+  }
+}
+
+@keyframes blink_last {
+  0% {
+    border: 2px solid #b9b9b9;
+    background-color: #b9b9b9;
+  }
+  25% {
     border: 2px solid #00942c;
     background-color: #00942c;
     box-shadow: 0 0 5px #dddddd;
