--- a/src/styles/navbar.scss
+++ b/src/styles/navbar.scss
@@ -12,6 +12,7 @@
     display: flex;
     align-items: center;
     gap: 1em;
+    cursor: pointer;
   }
 
   &_button {
