--- a/src/styles/tech-stack.scss
+++ b/src/styles/tech-stack.scss
@@ -11,7 +11,6 @@
 
 .tech_stack_list_item {
   text-align: center;
-  z-index: -1;
 
   p {
     margin: 0;
