--- a/src/styles/timeline.scss
+++ b/src/styles/timeline.scss
@@ -29,6 +29,10 @@
     animation-iteration-count: infinite;
   }
 
+  .last {
+    animation-name: blink_last;
+  }
+
   @media (max-width: 600px) {
     flex-direction: column;
     min-height: 55em;
